MorseEncoder and BinaryEncoder are now ready.