@@ -5,7 +5,6 @@
  */
 package com.kevin.technical_test;
 
-import java.util.List;
 import java.util.Set;
 import org.reflections.Reflections;
 
@@ -15,21 +14,26 @@ import org.reflections.Reflections;
  */
 public class Main {
 
-    /**
-     * @param args the command line arguments
-     */
     public static void main(String[] args) throws InstantiationException, IllegalAccessException {
+        
         String toEncode = "Kennia";
         
-        //We get all implementations of Encoder
         Reflections reflections = new Reflections("com.kevin.technical_test");
         
+        
+        //We get all implementations of Encoder in this package
         Set<Class<? extends Encoder>> classes = reflections.getSubTypesOf(Encoder.class);
         
-        List<Encoder> encoders = null;
-      
+        
+        /* For each implementation of encoder, we invoke the 
+           encode method with the specified word. 
+        */
         for(Class<? extends Encoder> encoder: classes){
-            encoder.newInstance().encode(toEncode);
+            /* newInstance() is deprecated in Java9, which I        
+               don't have in the computer I'm currently working on.
+               We should instead use encoder.getDeclaredConstructor().newInstance()
+            */    
+            encoder.newInstance().encode(toEncode); 
         }
         
     }
